--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,5 +57,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             />
+
+        <activity
+            android:name=".ShowDataPlayerActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            />
     </application>
 </manifest>
